# autonomous-enterprise-payment-orchestrator

./: .dockerignore  .gitattributes  .gitignore  AEPO_Unsloth_GRPO.ipynb  AGENTS.md  BLOG.md  Dockerfile  Dockerfile.training  Dockerfile.training.entrypoint.sh  LOCAL_TESTING.md  README.md  aepo_types.py  debug_heuristic.py  deploy_to_hf.ps1  dynamics_model.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  train.py  train_grpo_hf.py  unified_gateway.py  validate-submission.sh
docs/: AEPO_ARCHITECTURE.md  AEPO_AUDIT_ISSUES_AND_FIXES.md  AEPO_MIGRATION_PLAN.md  AEPO_PHASES_7_TO_10_AND_PATCHED.md  AEPO_PPHASED_IMPLEMENTATION_1_6.md  AUDIT_FINAL.md  AUDIT_V1.md  AUDIT_V2.md  AUDIT_V3.md  Apr_26_OpenEnv_Hackathon_Themes.docx  JUDGE_READY_MANUAL.md  LOCAL_TESTING.md  MASTER_DOC.md  MASTER_PROJECT_REQUIREMENTS.md  PROJECT_REQUIREMENT.md  RED_TEAM_AUDIT_AND_FIX_GUIDE.md  RED_TEAM_AUDIT_REPORT_V2.md  RL_FOR_BACKEND_ENGINEERS.md
docs/requirements/: Apr_26_OpenEnv_Hackathon_Themes.docx  (+3 more)
frontend/: DASHBOARD_GUIDE.md  migration.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
java-mirror/: MAPPING.md  README.md  build.gradle  gradle.properties  pom.xml  settings.gradle
results/: blind_spot_events.json
scratch/: docs_extracted.txt
server/: app.py
tests/: test_action.py  test_causal.py  test_curriculum.py  test_dual_mode.py  test_dynamics.py  test_graders.py  test_heuristic.py  test_observation.py  test_phases.py  test_reset.py  test_reward.py  test_server.py  test_step.py  test_world_model_integration.py
(+66 files in other folders)
