[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-enterprise-payment-orchestrator"
version = "0.1.0"
description = "SRE/DevOps Gateway Orchestrator for UPI architectures."
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "openenv>=0.1.13",
    "gymnasium>=0.29.1",
    "numpy>=1.26.4",
    "pydantic>=2.0",
    "openai>=1.0.0",
    "tomli>=2.0.0"
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"